yoda fucks hard

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="card startCharacter chooseCharacterRow " id="yoda">
       <img class="card-img-top" src="../unit-4-game/assets/images/yoda-810x456.jpg" alt="Card image cap">
       <div class="card-body" id="yodaHp">
-        <p class="card-text">yoda is the master of perception. His lightsaber skills are unmatched.</p>
+        <p class="card-text">yoda is the master of perception. His lightsaber skills are unmatched. yoda fucks hard</p>
       </div>
     </div>
     <div class="card startCharacter chooseCharacterRow" id="obiWan">
